--- a/src/app/pages/list-order/list-order.component.html
+++ b/src/app/pages/list-order/list-order.component.html
@@ -16,7 +16,7 @@
             <thead class="text-primary">
                 <th *ngFor="let fkey of filterKeys" [id]="'thead_'+fkey" class="th" (click)="changeOrder(fkey)">
                   {{ fkey }} 
-                  <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18 arrow__active">keyboard_arrow_up</span>
+                  <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18">keyboard_arrow_up</span>
                   <span [id]="'arrow_down_'+fkey" class="arrow material-icons md-18">keyboard_arrow_down</span>
                 </th>
                 <th class="action">
@@ -27,8 +27,8 @@
             </thead>
             <tbody>
               <tr *ngFor="let order of orderList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
-                <td *ngFor="let item of order | keyvalue : originalOrder">
-                  {{item.value}}
+                <td *ngFor="let col of cols">
+                  <span>{{ order[col.key] }}</span>
                 </td>
                 <td>
                   <div class="btn-group" role="group">
