--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@
     user-select: none;
     &:hover { border-bottom: 1px solid rgba(175, 1, 131, 1); }
     &__active {
-        border-bottom: 2px solid rgba(175, 1, 131, 1);
+        border-bottom: 2px solid rgba(175, 1, 131, 1) !important;
         &:hover { border-bottom: 2px solid rgba(175, 1, 131, 1); }
     }
 }
