--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -1,3 +1,3 @@
 <header class="navbar sticky-top navbar-dark bg-primary">
-  <h2>{{ headerText }} {{ listItemName }}</h2>
+  <h2 class="headerText">{{ headerText }} {{ listItemName }}</h2>
 </header>
