--- a/src/app/page/card/card.component.html
+++ b/src/app/page/card/card.component.html
@@ -4,9 +4,7 @@
       <i class="material-icons">{{ icon }}</i>
     </div>
     <p class="card-category">{{ content }}</p>
-    <h3 class="card-title">
-      {{ title }}
-    </h3>
+    <h3 class="card-title">{{ title }} {{ unit }}</h3>
   </div>
   <div class="card-footer">
     <div class="stats">
