--- a/src/app/editors/edit-order/edit-order.component.html
+++ b/src/app/editors/edit-order/edit-order.component.html
@@ -1,90 +1,46 @@
 <div class="main-content">
-  <div class="container-fluid">
-      <div class="row">
-          <div class="col-12">
-              <div class="card d-flex">
-                  <div class="card-header card-header-primary mb-4 w-50 mx-auto">
-                      <ng-container *ngIf="(order$ | async) as order">
-                          <h4 *ngIf="order.id==0" class="card-title">Create new order</h4>
-                          <h4 *ngIf="order.id!=0" class="card-title">Edit order</h4>
-                      </ng-container>
-                  </div>
-                  <div class="row">
-                      <div *ngIf="(order$ | async) as order" class="col-6 offset-3">
-                          <form #orderForm="ngForm" (ngSubmit)="onUpdate(orderForm, order)">
-                              <div class="form-group">
-                                  <label for="name">{{attributes.name}}</label>
-                                  <input name="name" [(ngModel)]="order.name" type="text" class="form-control"
-                                      pattern="[A-ZÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ](.{3,99})" required>
-                                  <div [hidden]="productForm.controls.name?.valid || productForm.controls.name?.pristine"
-                                      class="error-message">
-                                      {{attributes.name}} must be between 4-100 characters and must start with a
-                                      capital letter.
-                                  </div>
-                              </div>
-                              <div class="form-group">
-                                  <label for="type">{{attributes.type}}</label>
-                                  <input name="type" [(ngModel)]="product.type" type="text" class="form-control"
-                                      pattern="[A-ZÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ](.{3,49})" required>
-                                  <div [hidden]="productForm.controls.type?.valid || productForm.controls.type?.pristine"
-                                      class="error-message">
-                                      {{attributes.type}} must be between 4-50 characters and must start with a
-                                      capital letter.
-                                  </div>
-                              </div>
-                              <div class="form-group">
-                                  <label for="catID">{{attributes.catID}}</label>
-                                  <select class="custom-select" [(ngModel)]="product.catID" name="catID">
-                                      <option *ngFor="let category of categoryList$ | async" [value]="category.id">{{category.id}} - {{category.name}}: {{category.description}} </option>
-                                  </select>
-                              </div>
-
-                              <div class="form-group">
-                                  <label for="stock">{{attributes.stock}}</label>
-                                  <input name="stock" [(ngModel)]="product.stock" type="number" class="form-control"
-                                      required>
-                                  <div [hidden]="productForm.controls.stock?.valid || productForm.controls.stock?.pristine"
-                                      class="error-message">
-                                      {{attributes.stock}} is required and can only be a number.
-                                  </div>
-                              </div>
-                              <div class="form-group">
-                                  <label for="description">{{attributes.description}}</label>
-                                  <input name="description" [(ngModel)]="product.description" type="text"
-                                      class="form-control" pattern=".{10,255}" required>
-                                  <div [hidden]="productForm.controls.description?.valid || productForm.controls.description?.pristine"
-                                      class="error-message">
-                                      {{attributes.description}} must be between 10-255 characters.
-                                  </div>
-                              </div>
-                              <div class="form-group">
-                                  <label for="price">{{attributes.price}} in Forints</label>
-                                  <input name="price" [(ngModel)]="product.price" type="number" class="form-control"
-                                      required>
-                                  <div [hidden]="productForm.controls.price?.valid || productForm.controls.price?.pristine"
-                                      class="error-message">
-                                      {{attributes.price}} is required and can only be a number.
-                                  </div>
-                              </div>
-                              <div class="form-group">
-                                  <label class="mr-2" for="featured">Product is {{attributes.featured}}</label>
-                                  <input class="regular-checkbox" name="featured" [(ngModel)]="product.featured"
-                                      type="checkbox">
-                              </div>
-                              <div class="form-group">
-                                  <label class="mr-2" for="active">Product is {{attributes.active}}</label>
-                                  <input class="regular-checkbox" name="active" [(ngModel)]="product.active"
-                                      type="checkbox">
-                              </div>
-                              <button [disabled]="productForm.invalid" [disabled]="clicked" type="submit"
-                                  class="btn btn-primary btn-block btn-lg">
-                                  <i id="saveicon" class="fa fa-save"></i>
-                              </button>
-                          </form>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card d-flex">
+                    <div class="card-header card-header-primary mb-4 w-50 mx-auto">
+                        <ng-container *ngIf="(order$ | async) as order">
+                            <h4 *ngIf="order.id == 0" class="card-title">Create new order</h4>
+                            <h4 *ngIf="order.id != 0" class="card-title">Edit order</h4>
+                        </ng-container>
+                    </div>
+                    <div class="row">
+                        <div *ngIf="(order$ | async) as order" class="col-6 offset-3">
+                            <form #orderForm="ngForm" (ngSubmit)="onUpdate(orderForm, order)">
+                                <div class="form-group">
+                                    <label for="customerID">{{ attributes.customerID }}<span class="star"> *</span></label>
+                                    <input name="customerID" [(ngModel)]="order.customerID" type="number" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="productID">{{ attributes.productID }}<span class="star"> *</span></label>
+                                    <input name="productID" [(ngModel)]="order.productID" type="number" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="amount">{{ attributes.amount }}<span class="star"> *</span></label>
+                                    <input name="amount" [(ngModel)]="order.amount" type="number" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="status">{{ attributes.status }}<span class="star"> *</span></label>
+                                    <select name="status" class="custom-select" [(ngModel)]="order.status" required>
+                                        <option>new</option>
+                                        <option>paid</option>
+                                        <option>sihpped</option>
+                                    </select>
+                                </div>
+                                <button [disabled]="orderForm.invalid" [disabled]="clicked" type="submit"
+                                    class="btn btn-primary btn-block btn-lg">
+                                    <i id="saveicon" class="fa fa-save"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
