Bills: adat validálása kész, törlés gomb vissza
Az űrlap mennyiségként csak pozitív egész számot (és nullát - ami nem jó) fogad el. A törlés gomb visszakerült.

--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -55,6 +55,10 @@
                                                     class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
+                                                <button class="btn btn-danger"
+                                                    (click)="onDelete(bill)">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
                                             </div>
                                         </td>
                                     </tr>
