--- a/src/app/pages/categroy-list/categroy-list.component.css
+++ b/src/app/pages/categroy-list/categroy-list.component.css
@@ -31,14 +31,18 @@ th {
 	}
 	
 	td:nth-of-type(1):before { content: "ID"; }
-	td:nth-of-type(2):before { content: "Order ID"; }
-	td:nth-of-type(3):before { content: "Amount"; }
-	td:nth-of-type(4):before { content: "Status"; }
-	td:nth-of-type(5):before { content: "Options"; }
+	td:nth-of-type(2):before { content: "Name"; }
+	td:nth-of-type(3):before { content: "Description"; }
+	
 }
 .play{
 	background-color: yellowgreen;
 }
+.play:hover{background-color: rgb(138, 182, 51);}
+
 .filter-field:hover{
 	background-color: rgba(119, 136, 153, .2);
+}
+.highlight{
+	color :green;
 }
