--- a/src/app/pages/categroy-list/categroy-list.component.html
+++ b/src/app/pages/categroy-list/categroy-list.component.html
@@ -2,10 +2,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <div class="card">
+                <div class="card"> 
                     <div class="card-header card-header-info">
                         <h4 class="card-title ">Categories</h4>
-                        <p class="card-category">List of categories for orders.</p>
+                        <p class="card-category">List of categories for orders. <span class="highlight">List length: {{arrayLength}}</span></p> 
                     </div>
                     <div class="card my-0 px-3">
                         <button [routerLink]="'/category/0'" class="btn btn-primary my-3">
@@ -55,7 +55,8 @@
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
                                                 <button class="btn btn-danger"
-                                                    (click)="onDelete(category)">
+                                                data-target="#confirmationDialog" data-toggle="modal" 
+                                                    (click)="setCategoryDelete(category)">
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
@@ -68,6 +69,34 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="confirmationDialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger font-weight-bold">
+                    CONFIRMATION REQUIRED</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>{{category }}
+            <div class="modal-body">
+                <p><strong>Are you sure you want to delete: <span class="text-primary"></span></strong></p>
+                <p><strong><span class="text-primary">{{delCategory.name}} {{delCategory.description}}</span>?</strong></p>
+                <p>All information associated to this product will be
+                    permanently deleted.
+                    <span class="text-danger">This operation can not be
+                        undone.</span>
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-primary" id="cancelButton"
+                    data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" (click)="onDelete(delCategory)"
+                    data-dismiss="modal">Delete</button>
             </div>
         </div>
     </div>
