--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -43,7 +43,7 @@
                 <th (click)="onColumnSelect('type')"><b>Típus</b></th>
                 <th (click)="onColumnSelect('catId')"><b>catId</b></th>
                 <th (click)="onColumnSelect('description')"><b>Leírás</b></th>
-                <th (click)="onColumnSelect('price')"><b>Ár</b></th>
+                <th (click)="onColumnSelect('price')"><b>Ár(Ft)</b></th>
                 <th (click)="onColumnSelect('featured')"><b>Kiemelt</b></th>
                 <th (click)="onColumnSelect('active')"><b>Aktív</b></th>
                 <th (click)="onColumnSelect('operations')"><b>Műveletek</b></th>
@@ -62,7 +62,7 @@
                 <td>{{product.type}}</td>
                 <td>{{product.catId}}</td>
                 <td>{{product.description}}</td>
-                <td>{{product.price}}</td>
+                <td>{{product.price | hunFormat }}</td>
                 <td>
                     <input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox" disabled>
                 </td>
@@ -82,23 +82,36 @@
             </tr>
         </tbody>
     </table>
+
     <div class="table-responsive">
         <table class="table" id="summaries">
             <thead class="bg-dark text-light">
-                <th>Összes termék</th>
-                <th></th>
-                <th></th>
-                <th>Kiemelt termékek</th>
-                <th></th>
-                <th></th>
-                <div *ngIf="numberOfActiveProducts$ | async">
-                    ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
-                </div>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <div *ngIf="numberOfAllProducts$ | async">
+                        ͏͏͏͏͏͏͏<p>Összes termék: {{ numberOfAllProducts$ | async }}</p>
+                    </div>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <div *ngIf="(numberOfFeaturedProducts$ | async) !==-1">
+                        ͏͏͏͏͏͏͏<p>Kiemelt termékek száma: {{ numberOfFeaturedProducts$ | async }}</p>
+                    </div>
+                    <th></th>
+                    <div *ngIf="numberOfActiveProducts$ | async">
+                        ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
+                    </div>
+                </tr>
+
             </thead>
             <tbody>
-            </tbody>
+
 
         </table>
     </div>
-
 </div>
