--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -53,7 +53,7 @@
                                     </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let order of orderList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
+                                    <tr *ngFor="let order of orderList | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
                                             <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                                 <td
                                                     *ngIf="attribute.key!=='paid' && attribute.key!=='shipped' && attribute.key!=='new'">
