--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -6,14 +6,14 @@
         </div>
         <div class="col-12 my-3 mb-3">
 
-            <button class="btn btn-success btn-block mt-3 mb-5" [routerLink]="[0]">
+            <button class="btn btn-success btn-block mt-3 mb-5 ml-0" style="font-size:14px" [routerLink]="[0]">
                 <i class="material-icons">add</i> ÚJ TÉTEL LÉTREHOZÁSA
             </button>
         </div>
 
 
         <div class="col-3 mt-0 mb-5">
-            <select [(ngModel)]="filterKey" class="custom-select bg-light">
+            <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
                 <option *ngFor="let key of filterKeys" [value]="key">
                     {{ key }}
                 </option>
@@ -39,14 +39,14 @@
         <thead class="bg-dark text-light">
             <tr>
                 <th (click)="onColumnSelect('id')"> <b>#</b></th>
-                <th (click)="onColumnSelect('name')"><b>Termék név</b></th>
-                <th (click)="onColumnSelect('type')"><b>Típus</b></th>
-                <th (click)="onColumnSelect('catId')"><b>catId</b></th>
-                <th (click)="onColumnSelect('description')"><b>Leírás</b></th>
-                <th (click)="onColumnSelect('price')"><b>Ár(Ft)</b></th>
-                <th (click)="onColumnSelect('featured')"><b>Kiemelt</b></th>
-                <th (click)="onColumnSelect('active')"><b>Aktív</b></th>
-                <th (click)="onColumnSelect('operations')"><b>Műveletek</b></th>
+                <th (click)="onColumnSelect('name')"><b style="font-size: 18px">Termék név</b></th>
+                <th (click)="onColumnSelect('type')"><b style="font-size: 18px">Típus</b></th>
+                <th (click)="onColumnSelect('catId')"><b style="font-size: 18px">catId</b></th>
+                <th (click)="onColumnSelect('description')"><b style="font-size: 18px">Leírás</b></th>
+                <th (click)="onColumnSelect('price')"><b style="font-size: 18px">Ár(Ft)</b></th>
+                <th (click)="onColumnSelect('featured')"><b style="font-size: 18px">Kiemelt</b></th>
+                <th (click)="onColumnSelect('active')"><b style="font-size: 18px">Aktív</b></th>
+                <th (click)="onColumnSelect('operations')"><b style="font-size: 18px">Műveletek</b></th>
                 <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
                     <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
                 </th>
@@ -54,7 +54,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+            <tr
+                *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder ">
                 <td>
                     <span>{{ product.id }}</span>
                 </td>
@@ -69,12 +70,12 @@
                 <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox" disabled>
                 </td>
                 <td>{{product.operations}}
-                    <div class="btn-group">
+                    <div class="btn-group d-flex justify-content-end">
                         <button [routerLink]="[product.id]" class="btn btn-info">
-                            <i class="fa fa-pencil"></i>
+                            <i class="material-icons">edit</i>
                         </button>
                         <button (click)="onRemove(product)" class="btn btn-danger">
-                            <i class="fa fa-trash"></i>
+                            <i class="material-icons">delete_outline</i>
                         </button>
                     </div>
                 </td>
@@ -90,7 +91,7 @@
                     <th></th>
                     <th></th>
                     <div *ngIf="numberOfAllProducts$ | async">
-                        ͏͏͏͏͏͏͏<p>Összes termék: {{ numberOfAllProducts$ | async }}</p>
+                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes termék: {{ numberOfAllProducts$ | async }}</b></p>
                     </div>
                     <th></th>
                     <th></th>
@@ -100,11 +101,13 @@
                     <th></th>
                     <th></th>
                     <div *ngIf="(numberOfFeaturedProducts$ | async) !==-1">
-                        ͏͏͏͏͏͏͏<p>Kiemelt termékek száma: {{ numberOfFeaturedProducts$ | async }}</p>
+                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px"> termékek száma: {{ numberOfFeaturedProducts$ | async }}
+                            </b></p>
                     </div>
                     <th></th>
                     <div *ngIf="numberOfActiveProducts$ | async">
-                        ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
+                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Aktív termékek száma: {{ numberOfActiveProducts$ | async
+                                }}</b></p>
                     </div>
                 </tr>
 
