--- a/src/app/editors/edit-order/edit-order.component.html
+++ b/src/app/editors/edit-order/edit-order.component.html
@@ -1,4 +1,9 @@
 <div class="main-content">
+    <div class="card my-0 px-3">
+        <button (click)="backClicked()" class="btn btn-primary my-3">
+            Back to previous page
+        </button>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
