--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -37,27 +37,26 @@
     <table class="table table-striped">
       <thead class="bg-dark text-light">
         <tr>
-          <!-- <th *ngFor="let col of cols">{{ col.text }}</th> -->
-          <th (click)="onColumnSelect('id')"><b>#</b></th>
+          <th
+          (click)="onColumnSelect(col.key)"
+          *ngFor="let col of cols">th
+            <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+            <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
+          {{ col.text }}
+          </th>
+          <!-- <th (click)="onColumnSelect('id')"><b>#</b></th>
           <th (click)="onColumnSelect('customerID')"><b style="font-size: 18px">Vásárlók</b></th>
           <th (click)="onColumnSelect('productID')"><b style="font-size: 18px">Termékek</b></th>
           <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Mennyiség</b></th>
-          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th>
-          <th id="arrow">
-            <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
-          </th>
+          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
+
         </tr>
       </thead>
       <tbody>
         <tr
           *ngFor="
-            let order of orderList$
-              | async
-              | filter: filterKey:phrase
-              | sorter: sortedColumn:sortedOrder
-              | orderBindings
-          "
+            let order of orderList$ | async | filter: filterKey:phrase
+              | sorter:sortedColumn:sortedOrder | orderBindings"
         >
           <td>{{ order.id }}</td>
           <td>{{ order.customerID }}</td>
