--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -4,43 +4,43 @@
             <h2>PÉNZTÁR</h2>
         </div>
 
-        <div class="col-12 row">
-            <div class="col-5">
-                <button class="btn btn-success btn-block mt-0 mb-5" [routerLink]="[0]">
-                    <i class="material-icons">add</i>
-                    ÚJ SZÁMLA LÉTREHOZÁSA
+        <div class="col-12 my-3 mb-3">
+            <!-- <div class="col-5"> -->
+            <button class="btn btn-success btn-block mt-0 mb-5 ml-0" style="font-size:14px" [routerLink]="[0]">
+                <i class="material-icons">add</i>
+                ÚJ SZÁMLA LÉTREHOZÁSA
+            </button>
+        </div>
+
+        <div class="col-3 mt-0 mb-5"><select [(ngModel)]="filterKey" class="custom-select bg-light"
+                style="font-size: 20px">
+                <option *ngFor="let key of filterKeys" [value]="key">
+                    {{ key }}
+                </option>
+            </select>
+        </div>
+
+        <div class="col-4 search-bar mt-0 mb-5">
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Keresés" (keyup)="onChangePhrase($event)">
+                <button class="btn btn-success my-2 my-sm-0" type="submit">
+                    <i class="material-icons">manage_search</i>
+                    Keresés
                 </button>
-            </div>
-
-            <div class="col-3"><select [(ngModel)]="filterKey" class="custom-select bg-light">
-                    <option *ngFor="let key of filterKeys" [value]="key">
-                        {{ key }}
-                    </option>
-                </select>
-            </div>
-
-            <div class="col-4 search-bar">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Keresés"
-                        (keyup)="onChangePhrase($event)">
-                    <button class="btn btn-success my-2 my-sm-0" type="submit">
-                        <i class="material-icons">manage_search</i>
-                        Keresés
-                    </button>
-                </form>
-            </div>
-            <div class="col-5 mt-0 mb-5">
-                <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
-            </div>
+            </form>
+        </div>
+        <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
+            <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
+            <!-- </div> -->
         </div>
 
         <table class="table table-striped">
             <thead class="bg-dark text-light">
                 <tr>
                     <th (click)="onColumnSelect('id')"> <b>#</b></th>
-                    <th (click)="onColumnSelect('orderID')"><b>Rendelés azonosító</b></th>
-                    <th (click)="onColumnSelect('amount')"><b>Összeg</b></th>
-                    <th (click)="onColumnSelect('status')"><b>Státusz</b></th>
+                    <th (click)="onColumnSelect('orderID')"><b style="font-size: 18px">Rendelés azonosító</b></th>
+                    <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Összeg (Ft)</b></th>
+                    <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th>
                     <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
                         <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
                     </th>
@@ -66,7 +66,7 @@
                     <td>{{bill.amount}}</td>
                     <td>{{bill.status}}</td>
                     <td>
-                        <div class="btn-group">
+                        <div class="btn-group d-flex justify-content-end">
                             <button [routerLink]="[bill.id]" class="btn btn-info">
                                 <i class="material-icons">edit</i>
                             </button>
@@ -81,15 +81,17 @@
         <div class="table-responsive">
             <table class="table" id="summaries">
                 <thead class="bg-dark text-light">
-                    <th>Összes számla</th>
+                    <th style="font-size: 18px">Összes számla</th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <div *ngIf="sumOfUnpaidBills$ | async">
-                        ͏͏͏͏͏͏͏<p class="font-weight-bold">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async }}
-                            Ft
+                        ͏͏͏͏͏͏͏<p>
+                            <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async }}
+                                Ft</b>
+
                         </p>
                     </div>
                 </thead>
