--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -35,11 +35,10 @@
   </div>
 </div>
     <table class="table table-striped">
-      <thead class="bg-dark text-light">
+      <thead class="bg-dark text-light" >
         <tr>
-          <th
-          (click)="onColumnSelect(col.key)"
-          *ngFor="let col of cols">th
+          <th (click)="onColumnSelect(col.key)"
+          *ngFor="let col of cols">
             <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
             <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
           {{ col.text }}
