--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -12,8 +12,8 @@
 
       <div class="col-3 mt-0 mb-5">
         <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
-          <option *ngFor="let key of filterKeys" [value]="key">
-            {{ key }}
+          <option *ngFor="let col of cols" [value]="col">
+            {{ col.text }}
           </option>
         </select>
       </div>
@@ -39,13 +39,17 @@
         <tr>
           <th (click)="onColumnSelect(col.key)"
           *ngFor="let col of cols">
-            <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
+        <span *ngIf='col.key === sortedColumn'>
+          <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+          <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+        </span>
+
           {{ col.text }}
           </th>
+          <th></th>
           <!-- <th (click)="onColumnSelect('id')"><b>#</b></th>
           <th (click)="onColumnSelect('customerID')"><b style="font-size: 18px">Vásárlók</b></th>
-          <th (click)="onColumnSelect('productID')"><b style="font-size: 18px">Termékek</b></th>
+          <th (click)="onCnolumnSelect('productID')"><b style="font-size: 18px">Termékek</b></th>
           <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Mennyiség</b></th>
           <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
 
