--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -12,7 +12,7 @@
 
       <div class="col-3 mt-0 mb-5">
         <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
-          <option *ngFor="let col of cols" [value]="col">
+          <option *ngFor="let col of cols" [value]="col.key">
             {{ col.text }}
           </option>
         </select>
@@ -58,7 +58,7 @@
       <tbody>
         <tr
           *ngFor="
-            let order of orderList$ | async | filter: filterKey:phrase
+            let order of orderList$ | async | filter:filterKey:phrase
               | sorter:sortedColumn:sortedOrder | orderBindings"
         >
           <td>{{ order.id }}</td>
