--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -46,7 +46,22 @@
 
                     {{ col.text }}
                 </th>
-                <th></th>
+                <th>Kiemelt</th>
+                <th>Aktív</th>
+                <th>Műveletek</th>
+                <!-- <th (click)="onColumnSelect('id')"> <b>#</b></th>
+                <th (click)="onColumnSelect('name')"><b style="font-size: 18px">Termék név</b></th>
+                <th (click)="onColumnSelect('type')"><b style="font-size: 18px">Típus</b></th>
+                <th (click)="onColumnSelect('catId')"><b style="font-size: 18px">catId</b></th>
+                <th (click)="onColumnSelect('description')"><b style="font-size: 18px">Leírás</b></th>
+                <th (click)="onColumnSelect('price')"><b style="font-size: 18px">Ár(Ft)</b></th>
+                <th (click)="onColumnSelect('featured')"><b style="font-size: 18px">Kiemelt</b></th>
+                <th (click)="onColumnSelect('active')"><b style="font-size: 18px">Aktív</b></th>
+                <th (click)="onColumnSelect('operations')"><b style="font-size: 18px">Műveletek</b></th>
+                <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+                    <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
+                </th> -->
+
             </tr>
         </thead>
         <tbody>
@@ -75,6 +90,7 @@
                         </button>
                     </div>
                 </td>
+                <td></td>
             </tr>
         </tbody>
     </table>
