--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -111,7 +111,8 @@
                     <th></th>
                     <th></th>
                     <div *ngIf="(numberOfFeaturedProducts$ | async) !==-1">
-                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px"> termékek száma: {{ numberOfFeaturedProducts$ | async }}
+                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px"> Kiemelt termékek száma: {{ numberOfFeaturedProducts$ |
+                                async }}
                             </b></p>
                     </div>
                     <th></th>
