Filter megjelenése mobil nézetben javítva

--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -12,10 +12,10 @@
                             Create new bill
                         </button>
                     </div>
-                    <div class="card-body col-6 d-flex">
+                    <div class="card-body col-12 col-md-6 d-flex">
                         <input name="phrase" (keyup)="onChangePhrase($event)"
                             class="form-control" type="text"
-                            placeholder="Enter filtering phrase...">
+                            placeholder="Enter phrase...">
                         <select class="custom-select ml-2"
                             (change)="onChangeKey($event)">
                             <option
