--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -13,7 +13,7 @@
                             Create new customer
                         </button>
                     </div>
-                    <div class="card-body col-6 d-flex">
+                    <div class="card-body col-12 col-md-6 d-flex">
                         <input name="phrase" (keyup)="onChangePhrase($event)" [value]="phrase" [ngClass]="{'hidden': phraseHidden}" class="form-control" type="text"
                             placeholder="Enter filtering phrase...">
                         <select class="custom-select ml-2" (change)="onChangeKey($event)">
