--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -100,6 +100,9 @@
           </tbody>
 
       </table>
+      <footer>
+        <a href="#top" onclick="self.scrollTo(0, 0); return false;">Ugrás az oldal tetejére</a>
+    </footer>
   </div>
 
 
