--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -45,7 +45,7 @@
 
           {{ col.text }}
           </th>
-          <th></th>
+          <th>Aktív</th>
           <th></th>
         </tr>
       </thead>
