--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -123,7 +123,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p><strong>Are you sure you want to delete <span class="text-primary">{{order.name}}</span>?</strong>
+                <p><strong>Are you sure you want to delete <span class="text-primary">{{order.id}}</span>?</strong>
                 </p>
                 <p>All information associated to this order will be permanently deleted.
                     <span class="text-danger">This operation cannot be undone.</span>
